# nintlib

./: CMakeLists.txt  README.md
include/: nintlib.h
src/: fourc.cpp  nintlib.cpp
